<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz_app">Quiz App</string>
    <string name="welcome">Welcome!</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="flag">Flag</string>
    <string name="check">Check</string>
    <string name="finish">FINISH</string>
    <string name="trophy_image">trophy image</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
    <string name="result">Result</string>
    <string name="final_score">Your score is %1$s out of %2$s</string>
    <string name="congrats"> "%1$s, Congratulations!"</string>
</resources>