<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp"
    tools:context=".ui.ResultActivity"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_result"
        android:layout_marginTop="25dp"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/result"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_trophy"
        android:contentDescription="@string/trophy_image"
        android:src="@drawable/trophy"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_congratulations"
        android:layout_marginTop="16dp"
        android:text="@string/hey_congratulations"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:text="Username"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_score"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="20dp"
        tools:text="Your score is 9 out of 10"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_finish"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:text="@string/finish"
        android:textColor="@color/purple_500"
        android:textSize="18sp"
        android:textStyle="bold"
        />


</androidx.appcompat.widget.LinearLayoutCompat>